--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 It is built using HTML, CSS, JavaScript and React it ensures a dynamic and user-friendly experience.</p>
                 <div class="social-icons">
                     <!-- Removed the invalid closing </p> tag -->
-                    <a href="https://github.com/">
+                    <a href="https://github.com/Laxman-1/recipes">
                         <i class="bx bxl-github"></i>
                     </a>
                
